year/service-year.yaml
apiVersion: v1
kind: Service
metadata:
  name: year
  namespace: year
  labels:
    app: year
spec:
  selector:
    app: year
  ports:
    - name: http
      port: 3000
      targetPort: 80
