year/ingress-year.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: year
  namespace: year
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-geoip-country@kubernetescrd,traefik-robots-disallow-all@kubernetescrd

spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - year.andreybondarenko.com
      secretName: year-tls
  rules:
    - host: year.andreybondarenko.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: year
                port:
                  number: 3000
