year/network-policy-year-allow-ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: year-allow-ingress-http
  namespace: year
spec:
  podSelector:
    matchLabels:
      app: year
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
      ports:
        - protocol: TCP
          port: 3000
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: year
      ports:
        - protocol: TCP
          port: 3000
